Strukture von Site

--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wandern im Thüringer Wald</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Wandern im Thüringer Wald</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="#rund">Rundwanderweg</a>
+    <a href="#fern">Fernwanderweg</a>
+    <a href="#rad">Radweg</a>
+  </nav>
+
+  <main class="cards">
+    <a href="index2.html" class="card" id="rund">
+      <h2>Rundwanderwege</h2>
+      <p>Entdecke schöne Rundtouren im Thüringer Wald.</p>
+    </a>
+    <a href="index2.html" class="card" id="fern">
+      <h2>Fernwanderwege</h2>
+      <p>Weitwandern auf legendären Pfaden wie dem Rennsteig.</p>
+    </a>
+    <a href="index2.html" class="card" id="rad">
+      <h2>Radwege</h2>
+      <p>Radwandern durch Wald und über Höhenzüge.</p>
+    </a>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Wandern Thüringer Wald</p>
+  </footer>
 </body>
 </html>
