fix header and nav

--- a/rundwanderweg.html
+++ b/rundwanderweg.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Streckendetails - Thüringer Wald</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header>
-    <h1>Wandern im Thüringer Wald</h1>
+  <header class="header">
+
+    <h1 class="title">Wandern in Thüringer Wald</h1>
+    <p class="slogan">Pfad für Pfad – Freiheit im Grünen,im Herzen Deutschlands</p>
+
   </header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#rund">Rundwanderweg</a>
-    <a href="#fern">Fernwanderweg</a>
-    <a href="#rad">Radweg</a>
+  <nav class="navbar">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#rundwanderweg">Rundwanderweg</a></li>
+      <li><a href="#fernwanderweg">Fernwanderweg</a></li>
+      <li><a href="#ragweg">Ragweg</a></li>
+    </ul>
   </nav>
 
   <section class="detail-container">
@@ -37,4 +44,5 @@
     <p>&copy; 2025 Wandern Thüringer Wald</p>
   </footer>
 </body>
+
 </html>
