update two page

--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
     </header>
     <nav class="navbar">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#rundwanderweg">Rundwanderweg</a></li>
-            <li><a href="#fernwanderweg">Fernwanderweg</a></li>
-            <li><a href="#ragweg">Ragweg</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="rundwanderweg.html">Rundwanderweg</a></li>
+            <li><a href="fernwanderweg.html">Fernwanderweg</a></li>
+            <li><a href="">Ragweg</a></li>
         </ul>
     </nav>
     <main class="cards">
-        <a href="index2.html" class="card" id="rund">
+        <a href="rundwanderweg.html" class="card" id="rund">
             <h2>Rundwanderwege</h2>
             <p>Entdecke schöne Rundtouren im Thüringer Wald.</p>
         </a>
-        <a href="index2.html" class="card" id="fern">
+        <a href="fernwanderweg.html" class="card" id="fern">
             <h2>Fernwanderwege</h2>
             <p>Weitwandern auf legendären Pfaden wie dem Rennsteig.</p>
         </a>
-        <a href="index2.html" class="card" id="rad">
+        <a href="" class="card" id="rad">
             <h2>Radwege</h2>
             <p>Radwandern durch Wald und über Höhenzüge.</p>
         </a>
     </main>
 
     <footer>
-        <p>&copy; 2025 Wandern Thüringer Wald</p>
+        <p>© 2025 Wandern Thüringer Wald</p>
     </footer>
 </body>
 
