--- a/rundwanderweg.html
+++ b/rundwanderweg.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Streckendetails - Thüringer Wald</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Anaheim:wght@400..800&family=Dancing+Script:wght@400..700&family=Yeseva+One&display=swap"
+    rel="stylesheet">
+  <title>Streckendetails - Rundwanderweg</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -17,13 +20,12 @@
   </header>
   <nav class="navbar">
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#rundwanderweg">Rundwanderweg</a></li>
-      <li><a href="#fernwanderweg">Fernwanderweg</a></li>
-      <li><a href="#ragweg">Ragweg</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="rundwanderweg.html">Rundwanderweg</a></li>
+      <li><a href="fernwanderweg.html">Fernwanderweg</a></li>
+      <li><a href="">Ragweg</a></li>
     </ul>
   </nav>
-
   <section class="detail-container">
     <div class="details">
       <div><strong>Name:</strong> Rennsteig</div>
@@ -41,7 +43,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Wandern Thüringer Wald</p>
+    <p>©2025 Wandern Thüringer Wald</p>
   </footer>
 </body>
 
