--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Streckendetails - Thüringer Wald</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
   <header>
@@ -26,7 +26,14 @@
     </div>
     <div class="gallery-map">
       <div class="box">Fotos Gallery</div>
-      <div class="box">Karte</div>
+      <div class="box">Karte
+        <div class="map-description">
+          <p>Der Rennsteig ist der bekannteste Höhenwanderweg Deutschlands und führt durch den Thüringer Wald. Er bietet atemberaubende Ausblicke, dichte Wälder und historische Sehenswürdigkeiten.</p>
+          <img src="img/Rennsteig-Karte.jpg" alt="Karte des Rennsteigs" class="map-image" />
+          width="50%" height="auto">
+        </div>
+      </div>
+      
     </div>
     <div class="back-link">
       <a href="index.html">← Zurück zur Übersicht</a>
