--- a/fernwanderweg.html
+++ b/fernwanderweg.html
@@ -23,7 +23,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="rundwanderweg.html">Rundwanderweg</a></li>
       <li><a href="fernwanderweg.html">Fernwanderweg</a></li>
-      <li><a href="">Ragweg</a></li>
+      <li><a href="">Radweg</a></li>
     </ul>
   </nav>
   <section class="detail-container">
