--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Wandern Thüringer Wald</p>
+        <p>© 2025 Wandern in Thüringer Wald</p>
     </footer>
 </body>
 
