--- a/rundwanderweg.html
+++ b/rundwanderweg.html
@@ -43,7 +43,7 @@
   </section>
 
   <footer>
-    <p>©2025 Wandern Thüringer Wald</p>
+    <p>©2025 Wandern in Thüringer Wald</p>
   </footer>
 </body>
 
