fix after merge

--- a/rundwanderweg.html
+++ b/rundwanderweg.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
 
-    <h1 class="title">Wandern in Thüringer Wald</h1>
+    <h1 class="title">Wandern im Thüringer Wald</h1>
     <p class="slogan">Pfad für Pfad – Freiheit im Grünen,im Herzen Deutschlands</p>
 
   </header>
