--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anaheim:wght@400..800&family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Yeseva+One&display=swap"
+        rel="stylesheet">
     <title>Wandern im Thüringer Wald</title>
     <link rel="stylesheet" href="style.css" />
 </head>
