add card hover effect,  update navbar and footer

--- a/fernwanderweg.html
+++ b/fernwanderweg.html
@@ -25,7 +25,16 @@
       <li><a href="rundwanderweg.html">Rundwanderweg</a></li>
       <li><a href="fernwanderweg.html">Fernwanderweg</a></li>
       <li><a href="">Radweg</a></li>
+      <li>
+        <form class="search-form">
+          <input type="text" placeholder="Suche..." />
+          <button type="#">
+            suchen
+          </button>
+        </form>
+      </li>
     </ul>
+
   </nav>
   <section class="detail-container">
     <div class="details">
@@ -50,7 +59,7 @@
   </section>
 
   <footer>
-    <p>©2025 Wandern in Thüringer Wald</p>
+    <p>©2025 Wandern im Thüringer Wald</p>
   </footer>
 </body>
 
