--- a/index.html
+++ b/index.html
@@ -24,25 +24,79 @@
             <li><a href="rundwanderweg.html">Rundwanderweg</a></li>
             <li><a href="fernwanderweg.html">Fernwanderweg</a></li>
             <li><a href="">Radweg</a></li>
+            <li>
+                <form class="search-form">
+                    <input type="text" placeholder="Suche..." />
+                    <button type="submit">
+                        suchen
+                    </button>
+                </form>
+            </li>
         </ul>
+
     </nav>
-    <main class="cards">
-        <a href="rundwanderweg.html" class="card" id="rund">
-            <h2>Rundwanderwege</h2>
-            <p>Entdecke schöne Rundtouren im Thüringer Wald.</p>
-        </a>
-        <a href="fernwanderweg.html" class="card" id="fern">
-            <h2>Fernwanderwege</h2>
-            <p>Weitwandern auf legendären Pfaden wie dem Rennsteig.</p>
-        </a>
-        <a href="#radweg" class="card" id="rad">
-            <h2>Radwege</h2>
-            <p>Radwandern durch Wald und über Höhenzüge.</p>
-        </a>
+    <main>
+        <div class="cards">
+            <div class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <h2>Rundwanderwege</h2>
+                        <p>Entdecke schöne Rundtouren im Thüringer Wald.</p>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <ul class="rund-list">
+                            <li class="r1"><a href="rundwanderweg.html"> Inselsberg-Runde</a></li>
+                            <li class="r2"><a href="rundwanderweg.html">Schützenbergmoor-Runde bei Oberhof</a>
+                            </li>
+                            <li class="r3"><a href="rundwanderweg.html">Schönbrunn-Talsperre-Runde</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <h2>Fernwanderwege</h2>
+                        <p>Weitwandern auf legendären Pfaden.</p>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <ul class="fern-list">
+                            <li class="f1"><a href="fernwanderweg.html"> Rennsteig </a></li>
+                            <li class="f2"><a href="fernwanderweg.html">Thüringenweg</a>
+                            </li>
+                            <li class="f3"><a href="fernwanderweg.html">Eisenach-Leipzig-Weg</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <h2>Radwege</h2>
+                        <p>Radwandern durch Wald und über Höhenzüge.</p>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <ul class="rad-list">
+                            <li class="rad"><a href="#">Rennsteig-Route</a></li>
+                            <li class="rad"><a href="#"> Werratal-Route</a>
+                            </li>
+                            <li class="rad"><a href="#"> Ilmtal-Route</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </main>
 
     <footer>
-        <p>©2025 Wandern Thüringer Wald</p>
+        <p>©2025 Wandern im Thüringer Wald</p>
     </footer>
 </body>
 
