--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                             <li class="r2"><a href="rundwanderweg.html">Schützenbergmoor-Runde bei Oberhof</a>
                             </li>
                             <li class="r3"><a href="rundwanderweg.html">Schönbrunn-Talsperre-Runde</a></li>
+                            <li class="more"><a href="rundwanderweg.html">mehr</a></li>
                         </ul>
                     </div>
                 </div>
@@ -69,6 +70,7 @@
                             <li class="f2"><a href="fernwanderweg.html">Thüringenweg</a>
                             </li>
                             <li class="f3"><a href="fernwanderweg.html">Eisenach-Leipzig-Weg</a></li>
+                            <li class="more"><a href="fernwanderweg.html">mehr</a></li>
                         </ul>
                     </div>
                 </div>
@@ -87,6 +89,7 @@
                             <li class="rad"><a href="#"> Werratal-Route</a>
                             </li>
                             <li class="rad"><a href="#"> Ilmtal-Route</a></li>
+                            <li class="more"><a href="#">mehr</a></li>
                         </ul>
                     </div>
                 </div>
