update card effect

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="face face1">
                     <div class="content">
                         <h2>Radwege</h2>
-                        <p>Radwandern durch Wald und über Höhenzüge.</p>
+                        <p>Radwandern durch Wald und über Höhen-züge.</p>
                     </div>
                 </div>
                 <div class="face face2">
