--- a/fernwanderweg.html
+++ b/fernwanderweg.html
@@ -8,7 +8,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Anaheim:wght@400..800&family=Dancing+Script:wght@400..700&family=Yeseva+One&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="fernwandweg.css" />
+  <link rel="stylesheet" href="fernwanderweg.css" />
   <title>Streckendetails - Fernwanderweg</title>
 </head>
 
@@ -40,6 +40,13 @@
       <p>40 Stunden</p>
       <h3>Schwierigkeit</h3>
       <p>Mittel</p>
+      <h3>Beschreibung</h3>
+      <p>Der Rennsteig im Thüringer Wald bietet uns viele historische und kulturelle Sehenswürdigkeiten. Er führt auf 169 km von Hörschel bei Eisenach bis nach Blankenstein im nördlichen Frankenwald.
+         Dabei erleben wir auf dem Kammweg die Naturschönheiten des Mittelgebirges. Der Rennsteig besteht bereits seit dem Mittelalter und markierte damals die Grenze des Herzogtums Franken zur 
+         Landgrafschaft Thüringen. Noch heute finden wir entlang des Rennsteiges historische Grenzsteine, mit denen der Grenzweg seit dem 16. Jahrhundert markiert wurde. Auf dem Wanderweg, der vom
+         Deutschen Wanderverband mit dem Premiumsiegel „Wanderbares Deutschland“ ausgezeichnet wurde, erleben wir traumhafte Blicke auf die Wartburg, unberührte Natur und steile Anstiege, zum Beispiel
+         auf den Beerberg, mit spektakulärer Aussicht.
+      </p>  
     </div>
 
     <div class="map">
