--- a/fernwanderweg.html
+++ b/fernwanderweg.html
@@ -68,20 +68,17 @@
     allowfullscreen
     loading="lazy">
       </iframe>
-      <br />
-        <small>
-        <a href="https://www.openstreetmap.org">Größere Karte anzeigen</a>
-        </small>
+      
 </div>
 </main>
 
     <section class="gallery">
     <h2>Fotogallerie</h2>
     <div class="gallery-images">
-      <img src="/img/Rennsteig1.jpg" alt="Rennsteig" />
-      <img src="/img/Rennsteig-Karte.jpg" alt="Foto 2" />
-      <img src="/img/Rennsteig2.jpg" alt="Foto 3" />
-      <img src="/img/Rennsteig3.jpg" alt="Foto 4" />
+      <img src="img/Rennsteig1.jpg" alt="Rennsteig" />
+      <img src="img/Rennsteig-Karte.jpg" alt="Foto 2" />
+      <img src="img/Rennsteig2.jpg" alt="Foto 3" />
+      <img src="img/Rennsteig3.jpg" alt="Foto 4" />
 
     </div>
     </section>
