--- a/fernwanderweg.html
+++ b/fernwanderweg.html
@@ -72,14 +72,13 @@
 </div>
 </main>
 
-    <section class="gallery">
+    <section class="grid-gallery">
     <h2>Fotogallerie</h2>
     <div class="gallery-images">
       <img src="img/Rennsteig1.jpg" alt="Rennsteig" />
       <img src="img/Rennsteig-Karte.jpg" alt="Foto 2" />
       <img src="img/Rennsteig2.jpg" alt="Foto 3" />
       <img src="img/Rennsteig3.jpg" alt="Foto 4" />
-
     </div>
     </section>
 
