--- a/fernwanderweg.html
+++ b/fernwanderweg.html
@@ -78,7 +78,7 @@
 
 
 
-    <section class="grid-gallery">
+    <section class="gallery">
     <h2>Fotogallerie</h2>
     <div class="gallery-images">
 
